--- a/ps/index.html
+++ b/ps/index.html
@@ -15,7 +15,7 @@
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="querobemlive.site">CONTINUAR</a>
+          <a class="btn" href="https://querobemlive.site/">CONTINUAR</a>
         </div>
       </div>    
     </div>
