--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Simples Vitamina Caseira de 6 Ingredientes</b></h3>
+           <!-- <h3 class="my-4"><b>Simples Vitamina Caseira de 6 Ingredientes</b></h3> -->
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_6227edf54e1737000948e5d9">var s=document.createElement("script");s.src="https://cdn.converteai.net/3ad3fb1a-fc6e-443a-bc71-cb39e28784b1/players/6227edf54e1737000948e5d9/player.js",s.async=!0,document.head.appendChild(s);</script>
