--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <!-- Imagem Ultrasecreto -->
-            <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
+            <img class="img-fluid" src="./assets/img/ultrasecreto.svg"><br>
 
             <!-- Headline -->
            <!-- <h3 class="my-4"><b>Simples Vitamina Caseira de 6 Ingredientes</b></h3> -->
