--- a/ps/index.html
+++ b/ps/index.html
@@ -5,40 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="style.css">
   <title>Tudo Pronto!</title>
-  
-<!-- Meta Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1027646991436447');
-  fbq('track', 'AddToCart');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1027646991436447&ev=AddToCart&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
-  
 </head>
 <body> 
-  <div class="container">
+   <div class="container">
+     <!--<img class="img-fluid" src="Meditate.jpeg">-->
     <div class="black">
       <div>
         <div class="question">
-          <h1>Tudo Pronto!</h1>
+          <h1>Existe uma rotina simples de vitamina caseira que a maioria das mulheres nem percebem que existe...</h1>
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://querobemlive.site/">CONTINUAR</a>
+          <a class="btn" href="https://querobemlive.site">CONTINUAR</a>
         </div>
       </div>    
     </div>
     <p style="text-align: center; font-weight: bold;">© 2022 – Todos os direitos reservados. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
+   <center> <div class="text-white mt-4"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div></center>
   </div>
   <script type="text/javascript" src="script.js"></script>
 </body>
