--- a/ps/index.html
+++ b/ps/index.html
@@ -13,6 +13,8 @@
       <div>
         <div class="question">
           <h1>Existe uma rotina simples de vitamina caseira que a maioria das mulheres nem percebem que existe...</h1>
+          <p>Essa receita é composta por uma mistura de 6 ingredientes recém descobertos em estudos avançados de uma Ilha chamada Cat Ba...</p>
+           <p>Mudou minha vida e agora me sinto diferente, se quiser saber como funciona clique no botão abaixo.</p>
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
